2009-11-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Transformed reflected elements are clipped inside element with opacity
        https://bugs.webkit.org/show_bug.cgi?id=30957
        
        Testcase for reflected and transformed elements inside an opacity layer.

        * fast/reflections/opacity-reflection-transform.html: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.checksum: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.png: Added.
        * platform/mac/fast/reflections/opacity-reflection-transform-expected.txt: Added.

2009-11-12  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        https://bugs.webkit.org/show_bug.cgi?id=30997
        [Gtk] Implemment AtkDocument

        Added testing support for AtkDocument implementation.

        * accessibility/document-attributes.html: Added.
        * accessibility/document-attributes-expected.txt: Added.
        * platform/mac/Skipped:
        * platform/win/Skipped:

2009-11-11  Dirk Schulze  <krit@webkit.org>

        Reviewed by Simon Fraser.

        Some tests for canvas shadow.

        * fast/canvas/canvas-shadow-expected.txt: Added.
        * fast/canvas/canvas-shadow.html: Added.
        * fast/canvas/script-tests/canvas-shadow.js: Added.

2009-11-12  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Steve Falkenburg.

        Add failing tests to Skipped list.

        * platform/win/Skipped:

2009-11-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Skipping tests that fail intermitently.

        * platform/gtk/Skipped:

2009-11-12  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Test for <rdar://problem/7267951>
        Canvas methods should reject uses of NaN and Infinity.

        * fast/canvas/canvas-with-illegal-args-expected.txt: Added.