@@ -4,34 +4,13 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE
 
 
 Left Mouse Button
-mousedown(0)
-mouseup(0)
-click(0)
-mousedown(0)
-mouseup(0)
-click(0)
-dblclick(0)
+PASS eventLog is "mousedown(0) mouseup(0) click(0) mousedown(0) mouseup(0) click(0) dblclick(0) "
 Middle Mouse Button
-mousedown(1)
-mouseup(1)
-click(1)
-mousedown(1)
-mouseup(1)
-click(1)
-dblclick(1)
+PASS eventLog is "mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) "
 Right Mouse Button
-mousedown(2)
-mouseup(2)
-mousedown(2)
-mouseup(2)
+PASS eventLog is "mousedown(2) mouseup(2) mousedown(2) mouseup(2) "
 4th Mouse Button
-mousedown(1)
-mouseup(1)
-click(1)
-mousedown(1)
-mouseup(1)
-click(1)
-dblclick(1)
+PASS eventLog is "mousedown(1) mouseup(1) click(1) mousedown(1) mouseup(1) click(1) dblclick(1) "
 PASS successfullyParsed is true
 
 TEST COMPLETE
